--- a/live-vanilla-build/index.html
+++ b/live-vanilla-build/index.html
@@ -3,12 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="css/index.css" />
+    <script
+      src="https://kit.fontawesome.com/3bfd3ce9e5.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Vanila JS T3</title>
   </head>
   <body>
     <main>
       <div class="grid">
-        <div class="turn"></div>
+        <div class="turn">
+          <i class="fa-solid fa-x turquoise"></i>
+          <p class="turquoise">Player 1, you're up!</p>
+        </div>
         <div class="actions"></div>
         <div class="square"></div>
         <div class="square"></div>
