--- a/live-vanilla-build/index.html
+++ b/live-vanilla-build/index.html
@@ -16,6 +16,17 @@
           <i class="fa-solid fa-x turquoise"></i>
           <p class="turquoise">Player 1, you're up!</p>
         </div>
+        <div class="menu" data-id="menu">
+          <button class="menu-btn" data-id="menu-btn">
+            Actions
+            <i class="fa-solid fa-chevron-down"></i>
+          </button>
+
+          <div class="items border hidden" data-id="menu-items">
+            <button data-id="reset-btn">Reset</button>
+            <button data-id="new-round-btn">New Round</button>
+          </div>
+        </div>
         <div class="actions"></div>
         <div class="square"></div>
         <div class="square"></div>
