--- a/live-vanilla-build/index.html
+++ b/live-vanilla-build/index.html
@@ -12,34 +12,49 @@
   <body>
     <main>
       <div class="grid">
+        <!-- Turn indicator -->
         <div class="turn">
           <i class="fa-solid fa-x turquoise"></i>
           <p class="turquoise">Player 1, you're up!</p>
         </div>
+
+        <!-- Dropdown menu -->
         <div class="menu" data-id="menu">
-          <button class="menu-btn" data-id="menu-btn">
+          <button class="menu-btn">
             Actions
             <i class="fa-solid fa-chevron-down"></i>
           </button>
 
-          <div class="items border hidden" data-id="menu-items">
-            <button data-id="reset-btn">Reset</button>
-            <button data-id="new-round-btn">New Round</button>
+          <div class="items border hidden">
+            <button>Reset</button>
+            <button>New Round</button>
           </div>
         </div>
-        <div class="actions"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="score"></div>
-        <div class="score"></div>
-        <div class="score"></div>
+
+        <!-- Game board -->
+        <div class="square shadow"></div>
+        <div class="square shadow"></div>
+        <div class="square shadow"></div>
+        <div class="square shadow"></div>
+        <div class="square shadow"></div>
+        <div class="square shadow"></div>
+        <div class="square shadow"></div>
+        <div class="square shadow"></div>
+        <div class="square shadow"></div>
+
+        <!-- Scoreboard -->
+        <div class="score shadow" style="background-color: var(--turquoise)">
+          <p>Player 1</p>
+          <span>0 Wins</span>
+        </div>
+        <div class="score shadow" style="background-color: var(--light-gray)">
+          <p>Ties</p>
+          <span data-id="ties">0</span>
+        </div>
+        <div class="score shadow" style="background-color: var(--yellow)">
+          <p>Player 2</p>
+          <span>0 Wins</span>
+        </div>
       </div>
     </main>
     <footer>
