--- a/live-vanilla-build/index.html
+++ b/live-vanilla-build/index.html
@@ -19,7 +19,7 @@
         </div>
 
         <!-- Dropdown menu -->
-        <div class="menu" data-id="menu">
+        <div class="menu">
           <button class="menu-btn">
             Actions
             <i class="fa-solid fa-chevron-down"></i>
@@ -71,5 +71,16 @@
         >
       </p>
     </footer>
+
+    <!-- Modal that opens when game ends -->
+    <div class="modal hidden">
+      <div class="modal-contents hidden">
+        <p>Player 1 wins!</p>
+        <button>Play again</button>
+      </div>
+    </div>
+
+    <script src="js/app.js">
+    </script>
   </body>
 </html>
