--- a/live-vanilla-build/index.html
+++ b/live-vanilla-build/index.html
@@ -80,7 +80,7 @@
       </div>
     </div>
 
-    <script src="js/app.js">
-    </script>
+    <script src="js/app.js"></script>
+    <script src="js/second-app.js"></script>
   </body>
 </html>
