--- a/live-vanilla-build/index.html
+++ b/live-vanilla-build/index.html
@@ -19,15 +19,15 @@
         </div>
 
         <!-- Dropdown menu -->
-        <div class="menu">
+        <div class="menu" data-id="menu">
           <button class="menu-btn">
             Actions
             <i class="fa-solid fa-chevron-down"></i>
           </button>
 
-          <div class="items border hidden">
-            <button>Reset</button>
-            <button>New Round</button>
+          <div class="items border hidden" data-id="menu-items">
+            <button data-id="reset-btn">Reset</button>
+            <button data-id="new-round-btn">New Round</button>
           </div>
         </div>
 
@@ -81,6 +81,5 @@
     </div>
 
     <script src="js/app.js"></script>
-    <script src="js/second-app.js"></script>
   </body>
 </html>
