--- a/live-vanilla-build/index.html
+++ b/live-vanilla-build/index.html
@@ -13,9 +13,9 @@
     <main>
       <div class="grid">
         <!-- Turn indicator -->
-        <div class="turn">
-          <i class="fa-solid fa-x turquoise"></i>
-          <p class="turquoise">Player 1, you're up!</p>
+        <div class="turn yellow" data-id="turn">
+          <i class="fa-solid fa-x"></i>
+          <p>Player 1, you're up!</p>
         </div>
 
         <!-- Dropdown menu -->
@@ -73,10 +73,10 @@
     </footer>
 
     <!-- Modal that opens when game ends -->
-    <div class="modal hidden">
-      <div class="modal-contents hidden">
-        <p>Player 1 wins!</p>
-        <button>Play again</button>
+    <div class="modal hidden" data-id="modal">
+      <div class="modal-contents">
+        <p data-id="modal-text">Player 1 wins!</p>
+        <button data-id="modal-btn">Play again</button>
       </div>
     </div>
 
