--- a/live-vanilla-build/index.html
+++ b/live-vanilla-build/index.html
@@ -20,7 +20,7 @@
 
         <!-- Dropdown menu -->
         <div class="menu" data-id="menu">
-          <button class="menu-btn">
+          <button class="menu-btn" data-id="menu-btn">
             Actions
             <i class="fa-solid fa-chevron-down"></i>
           </button>
