--- a/live-vanilla-build/index.html
+++ b/live-vanilla-build/index.html
@@ -14,8 +14,8 @@
       <div class="grid">
         <!-- Turn indicator -->
         <div class="turn" data-id="turn">
-          <i class="fa-solid fa-x yellow"></i>
-          <p class="yellow">Player 1, you're up!</p>
+          <i class="fa-solid fa-x turquoise"></i>
+          <p class="turquoise">Player 1, you're up!</p>
         </div>
 
         <!-- Dropdown menu -->
