--- a/live-vanilla-build/index.html
+++ b/live-vanilla-build/index.html
@@ -45,7 +45,7 @@
         <!-- Scoreboard -->
         <div class="score shadow" style="background-color: var(--turquoise)">
           <p>Player 1</p>
-          <span>0 Wins</span>
+          <span data-id="p1-wins">0 Wins</span>
         </div>
         <div class="score shadow" style="background-color: var(--light-gray)">
           <p>Ties</p>
@@ -53,12 +53,11 @@
         </div>
         <div class="score shadow" style="background-color: var(--yellow)">
           <p>Player 2</p>
-          <span>0 Wins</span>
+          <span data-id="p2-wins">0 Wins</span>
         </div>
       </div>
     </main>
     <footer>
-
       <p>
         Original project by
         <a href="https://twitter.com/megfdev">@megfdev</a> and
@@ -71,7 +70,6 @@
           >@zg_dev</a
         >
       </p>
-      
     </footer>
 
     <!-- Modal that opens when game ends -->
