--- a/live-vanilla-build/index.html
+++ b/live-vanilla-build/index.html
@@ -57,20 +57,7 @@
         </div>
       </div>
     </main>
-    <footer>
-      <p>
-        Original project by
-        <a href="https://twitter.com/megfdev">@megfdev</a> and
-        <a href="https://twitter.com/Ivan00sto">@Ivan00Sto</a>
-      </p>
-
-      <p>
-        Refactored by
-        <a href="https://twitter.com/zg_dev" style="color: var(--turquoise)"
-          >@zg_dev</a
-        >
-      </p>
-    </footer>
+    <footer></footer>
 
     <!-- Modal that opens when game ends -->
     <div class="modal hidden" data-id="modal">
@@ -83,4 +70,3 @@
     <script src="js/app.js" type="module"></script>
   </body>
 </html>
-
